[gd_scene load_steps=5 format=3 uid="uid://bcnpdinrepean"]

[ext_resource type="Script" path="res://door/door.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bivo3ncbyf02f" path="res://door/model/door.dae" id="2"]
[ext_resource type="AudioStream" uid="uid://c2nls7s14emyc" path="res://door/open_close.wav" id="3"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(8.85286, 2.26084, 11.0664)

[node name="Door" type="Area3D"]
collision_mask = 5
script = ExtResource("1")

[node name="DoorModel2" parent="." instance=ExtResource("2")]

[node name="Skeleton3D" parent="DoorModel2/armature-doorsimple" index="0"]
bones/1/position = Vector3(2.12019, -3.55271e-15, -1.02721)
bones/2/position = Vector3(-2.12019, -3.55271e-15, -1.02721)
bones/3/position = Vector3(0, -0.335815, 0)
bones/4/position = Vector3(0, 3.56918, 0)
bones/5/position = Vector3(4.08632, 1.5, -1.37599e-09)
bones/6/position = Vector3(-4.08632, 1.5, -1.37599e-09)

[node name="doorright" parent="DoorModel2/armature-doorsimple/Skeleton3D" index="3"]
disable_mode = 2

[node name="doorsimple" parent="DoorModel2/armature-doorsimple/Skeleton3D" index="4"]
skeleton = NodePath("..")

[node name="doorupper" parent="DoorModel2/armature-doorsimple/Skeleton3D" index="5"]
disable_mode = 2

[node name="AnimationPlayer" parent="DoorModel2" index="1"]
autoplay = "doorsimple_closed"

[node name="sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3")
volume_db = 4.0
unit_size = 7.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.77966, 0)
shape = SubResource("1")

[connection signal="body_entered" from="." to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]

[editable path="DoorModel2"]
